# ICE

./: .gitignore  CMakeLists.txt
include/ICE/: ICE.hpp  config.hpp  utils.hpp
include/ICE/application/: application.hpp
include/ICE/core/: coremodule.hpp  dispatcher.hpp  event.hpp  log.hpp  memory.hpp
include/ICE/core/events/: application_event.hpp  events.hpp  key_event.hpp  mouse_event.hpp
include/ICE/window/: window.hpp
src/: CMakeLists.txt
src/ICE/: CMakeLists.txt  ICE.cpp
src/ICE/application/: CMakeLists.txt  application.cpp
src/ICE/core/: CMakeLists.txt  log.cpp  memory.cpp
src/ICE/window/: CMakeLists.txt
src/ICE/window/backends/SDL2/: CMakeLists.txt  SDL2window.cpp  SDL2window.hpp
src/examples/: CMakeLists.txt  event_test.cpp  event_test.hpp
