set(ICE_MODULE_NAME ICE_SDL2_BACKEND)

set(ICE_SDL2_BACKEND_SOURCE_FILES
	# put all your .c/.cpp here.
    SDL2window.cpp
)


add_library(${ICE_MODULE_NAME}
    ${ICE_SDL2_BACKEND_SOURCE_FILES}
)

target_include_directories(${ICE_MODULE_NAME} PUBLIC
	"${CMAKE_SOURCE_DIR}/src"
	"${CMAKE_SOURCE_DIR}/include"
)

target_link_libraries(${ICE_MODULE_NAME} PUBLIC
	SDL2main SDL2-static
    ICE_CORE
    ICE_WINDOW
    ICE_APPLICATION
)

set_target_properties(${ICE_MODULE_NAME} PROPERTIES
  	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib"
  	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib"
  	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
)
